# SysProg

./: .gitignore  .gitmodules
EasySecurity/: CMakeLists.txt  analize  easy_security.cpp  easy_security.hpp  learn_fan.cpp  main.cpp  patterns.cpp  patterns.hpp
EasySecurity/src/: easy_security.cpp  easy_security.hpp  fanotify_print.cpp  fanotify_print.hpp  learn_fan.cpp  main.cpp  patterns.cpp  patterns.hpp  proc_processor.cpp  proc_processor.hpp  storage.cpp  storage.hpp  types.hpp
Encryptor/: README.md
